syntax = "proto3";

// 命 令 号: 106
// 命令名称: file_recv_start
// 命令描述: 启动回传文件
// 文件名称: s106_file_recv_start.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbFileRecvStart";

message FileRecvStartRequest {
  // ATTR: REQUSET
  string path = 1;     //需要上传的文件路径
}

message FileRecvStartResponse {
  // ATTR: REQACK
  uint32 pack_num = 1; //分包数量
}
